Stylized facts table, some refs adds. Some internal links fix.

--- a/Writings/Super_ABM/Empirical.org
+++ b/Writings/Super_ABM/Empirical.org
@@ -15,3 +15,5 @@ Estrutura de tópicos:
 - Fatos estilizados sobre investimento induzido
 - Evidências empíricas da literatura a partir do SSM
 - Reapresentar tabela de fatos estilizados de DOSI expandida com os do SSM
+
+#+LATEX: \include{./tabs/Stylized_Facts.tex}
