--- a/Writings/Super_ABM/Introduction.org
+++ b/Writings/Super_ABM/Introduction.org
@@ -2,6 +2,7 @@
 #+EXCLUDE_TAGS: noexport
 
 * Technical setup :noexport:
+bibliography:./refs.bib
 
 * Main text :ignore:
 
@@ -15,7 +16,7 @@ Recently, there are empirical support for this results () while other are still 
 Besides this econometric validation, it is unclear how this upper-level property of non-residential investment emerge from lower level decisions.
 
 There is a long strand of agent based models that emphasizes other stylized facts regarding non-residential investment.
-Just to name a few of them, there is the relevance of technological progress and innovation, market structure and competition, firms' long-term survival condition among other (Cabalero, Taylor and Woodford).
+Just to name a few of them, there is the relevance of technological progress and innovation, market structure and competition, firms' long-term survival condition among others cite:caballero_1999_Aggregate.
 One of the properties reported by this literature is the emergence of non-residential investment lumpiness.
 In summary, firms expanding at different levels coexist, which implies the persistence of heterogeneity.
 These results suggests that there are non-trivial mesoeconomic level mechanisms that explain how microeconomic behavior of the firm generates aggregate pattern of non-residential investment.
@@ -25,7 +26,7 @@ Based on this collection of empirical results, this paper intend to investigate 
 In order to do so, some additional steps are required to moving from a standard macroconomic Sraffian supermultiplier model to a microeconomic founded.
 The main contribution of this paper is to evaluate this microeconomics path towards an agent based SSM model.
 Thus, the article is organized as follows.
-Section ref:sec:empirical:ch_super reviews some stylized facts reported by the Sraffian supermultiplier framework, enhancing the list already mapped by AB literature.
+Section ref:sec:empirical_ch_super reviews some stylized facts reported by the Sraffian supermultiplier framework, enhancing the list already mapped by AB literature.
 Section ref:sec:model:ch_super presents a parsimonious Stock-Flow consistent model with heterogeneous firms.
 The core mechanism are two switching procedures regarding expectations (Section ref:sec:switching_expec) and investment decisions (Section ref:sec:switching_invest).
 Additional, this section also show the required assumptions to convert the SSM model into a firm-level version.
